--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 h1 {
@@ -17,7 +18,7 @@ section {
 
 .half-width {
     width: 50%;
-    padding-left: 2%;
+    padding-left: 7%;
 }
 
 .half-width img {
@@ -31,4 +32,9 @@ section {
     color: white;
     font-weight: 700;
     border-radius: 5px;
+}
+
+.top-banner {
+    background-image: url(Untitled.png);
+    background-repeat: no-repeat;
 }
