--- a/style.css
+++ b/style.css
@@ -9,16 +9,18 @@ h1 {
 }
 
 .Orange {
-    color: orange;
+    color: rgb(0, 149, 255);
 }
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width {
     width: 50%;
     padding-left: 7%;
+    padding-right: 7%;
 }
 
 .half-width img {
@@ -27,7 +29,7 @@ section {
 
 .link-button {
     text-decoration: none;
-    background-image: linear-gradient(orange, tomato);
+    background-image: linear-gradient(rgb(0, 255, 225), rgb(0, 110, 255));
     padding: 10px 40px;
     color: white;
     font-weight: 700;
@@ -37,4 +39,10 @@ section {
 .top-banner {
     background-image: url(Untitled.png);
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(Untitled2.png);
+    background-repeat: no-repeat;
+    background-position: 2%;
 }
