--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h2 {
 .dream-big {
     background-image: url(Untitled2.png);
     background-repeat: no-repeat;
-    background-position: 2%;
+    background-position: 1px;
 }
 
 .experiance-area {
@@ -81,4 +81,12 @@ h2 {
 
 footer p {
     text-align: center;
+}
+
+.u1 {
+    color: blue;
+}
+
+.u2 {
+    color: rgb(128, 10, 240);
 }
